2_nginx_ingress/nsm/nginx-plus-ingress-nap-nsm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
        nsm.nginx.com/deployment: nginx-ingress
        spiffe.io/spiffeid: "true"
      annotations:
        nsm.nginx.com/enable-ingress: "true"
        nsm.nginx.com/enable-egress: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: danisch/nginx-ingress-nap-dos:2.1.0
        imagePullPolicy: Always
        name: nginx-plus-ingress
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: readiness-port
          containerPort: 8081
        - name: prometheus
          containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        volumeMounts:
        - mountPath: /run/spire/sockets
          name: spire-agent-socket
        args:
          - -nginx-plus
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          - -enable-app-protect
          - -enable-app-protect-dos
          - -report-ingress-status
          - -enable-prometheus-metrics
          - -nginx-status-allow-cidrs=0.0.0.0/0
          - -nginx-status-port=30880
          #- -v=3
          - -enable-latency-metrics
          - -spire-agent-address=/run/spire/sockets/agent.sock
      volumes:
      - hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
        name: spire-agent-socket
