2_nginx_ingress/nsm/prometheus-nginx.yaml
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress-prometheus-nsm
  name: nginx-ingress-prometheus-nsm
  namespace: nginx-ingress
spec:
  ports:
  - name: prometheus
    port: 9113
    targetPort: prometheus
  selector:
    app: nginx-ingress-nsm
